--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,9 @@ header h1 a {font:60px/1.2em Arial, Helvetica, sans-serif;color:#414141;text-dec
 header nav {width:1024px;height:73px;position:absolute;left:32px;background:url(../images/nav-sprite.png)}
 header nav ul {padding-left:2px}
 header nav li {float:left;padding-top:10px}
-header nav li a {font:28px/50px Arial, Helvetica, sans-serif;color:#000;width:168px;display:block;text-align:center;border-right:1px #f5f5f5 solid;border-left:1px #efefef solid;text-decoration:none}
+header nav li a {font:28px/50px Arial, Helvetica, sans-serif;color:#000;width:168px;display:block;text-align:center;
+/* 	border-right:1px #f5f5f5 solid; */
+	border-left:1px #efefef solid;text-decoration:none}
 header nav li a:hover,header nav li.active a {color:#037f00}
 /* header>* */
 /* #content */
